# avicenna-back-end

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/rest-api/: IResourceFactory.hpp  IServiceSettingsFactory.hpp  avicenaService.cpp  avicenaService.hpp  avicenaServiceSettingFactory.cpp  avicenaServiceSettingFactory.hpp  computeResourceFactory.cpp  computeResourceFactory.hpp  downloadResourceFactory.cpp  downloadResourceFactory.hpp
src/solver/: dummySolver.cpp  dummySolver.hpp
